2009-09-06  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: No longer does foster parenting |style|, |script|,
	and |input type=hidden| elements (HTML5 revision 2988).

2009-09-06  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Dropped the |eventsource| element (HTML5 revision
	2870).

2009-09-06  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (_tree_construction_main): Treate |keygen| as a void
	element (HTML5 revision 2960).

2009-09-05  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Moved the "in table text" insertion mode code up
	such that it does also work as specced in HTML5 in the remaining
	cases (HTML5 revision 3382).

2009-09-05  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Implementing the "in table text" insertion mode,
	first half (HTML5 revision 3382).

2009-08-30  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Allow |xml:lang| in HTML document if the
	owner element is not an HTML element (HTML5 revision 3697).

2009-08-23  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Allow <input type=hidden> in context where
	interactive content is disallowed (HTML5 revision 2392).

2009-08-16  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Dropped support for "XSLT-compat" and added
	"about:legacy-compat" (HTML5 revision 2725).

2009-08-16  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: "<!DOCTYPE>" is now explicitly supported in the
	spec (HTML5 revision 2700).

2009-08-16  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Added support for <script> element in the "in
	select" and "in select in table" insertion modes (HTML5 revision
	2500).

2009-08-16  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: An <hn> start tag in an <hn> element should close
	the earlier element (HTML5 revision 2501).

2009-08-16  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: The </br> end tags before the <body> start tag
	should equally survive as the first br element child of the body
	element (HTML5 revision 2586).

2009-08-16  Wakaba  <wakaba@suika.fam.cx>
