@@ -1,4 +1,9 @@
-<Atom:feed xml:lang="en" xmlns="http://www.w3.org/2005/Atom" xmlns:Atom="http://www.w3.org/2005/Atom"><Atom:id>http://suika.fam.cx/www/markup/html/whatpm/whatpm-commit</Atom:id><Atom:title>Whatpm ChangeLog diffs</Atom:title><Atom:updated>2009-09-06T01:45:38Z</Atom:updated><Atom:link href="http://suika.fam.cx/www/markup/html/whatpm/whatpm-commit" hreflang="en" rel="self" type="application/atom+xml"></Atom:link><Atom:link href="http://suika.fam.cx/www/markup/html/whatpm/readme" rel="related"></Atom:link><Atom:link href="http://suika.fam.cx/www/markup/html/whatpm/readme#license" rel="license"></Atom:link><Atom:rights>This feed is free software; you can redistribute it and/or modify it under the same terms as Perl itself.</Atom:rights><entry xml:id="entry-1252201557"><id>http://suika.fam.cx/www/markup/html/whatpm/whatpm-commit#entry-1252201557</id><title>2009-09-06 Wakaba</title><updated>2009-09-06T01:45:38Z</updated><author><name>Wakaba</name><email>wakaba@suika.fam.cx</email></author><content type="text">++ whatpm/t/ChangeLog	6 Sep 2009 01:44:50 -0000
+<Atom:feed xml:lang="en" xmlns="http://www.w3.org/2005/Atom" xmlns:Atom="http://www.w3.org/2005/Atom"><Atom:id>http://suika.fam.cx/www/markup/html/whatpm/whatpm-commit</Atom:id><Atom:title>Whatpm ChangeLog diffs</Atom:title><Atom:updated>2009-09-06T02:20:32Z</Atom:updated><Atom:link href="http://suika.fam.cx/www/markup/html/whatpm/whatpm-commit" hreflang="en" rel="self" type="application/atom+xml"></Atom:link><Atom:link href="http://suika.fam.cx/www/markup/html/whatpm/readme" rel="related"></Atom:link><Atom:link href="http://suika.fam.cx/www/markup/html/whatpm/readme#license" rel="license"></Atom:link><Atom:rights>This feed is free software; you can redistribute it and/or modify it under the same terms as Perl itself.</Atom:rights><entry xml:id="entry-1252203650"><id>http://suika.fam.cx/www/markup/html/whatpm/whatpm-commit#entry-1252203650</id><title>2009-09-06 Wakaba</title><updated>2009-09-06T02:20:32Z</updated><author><name>Wakaba</name><email>wakaba@suika.fam.cx</email></author><content type="text">++ whatpm/Whatpm/ChangeLog	6 Sep 2009 02:20:24 -0000
+	* HTML.pm.src: Simplified foster parenting (HTML5 revision 2732).
+
+2009-09-06  Wakaba  &lt;wakaba@suika.fam.cx&gt;
+
+</content></entry><entry xml:id="entry-1252201557"><id>http://suika.fam.cx/www/markup/html/whatpm/whatpm-commit#entry-1252201557</id><title>2009-09-06 Wakaba</title><updated>2009-09-06T01:45:38Z</updated><author><name>Wakaba</name><email>wakaba@suika.fam.cx</email></author><content type="text">++ whatpm/t/ChangeLog	6 Sep 2009 01:44:50 -0000
 	* tree-test-1.dat: Updated test results related to the &quot;tainted&quot;
 	flag (HTML5 revision 2988).
 
