@@ -1,5 +1,9 @@
 2009-09-06  Wakaba  <wakaba@suika.fam.cx>
 
+	* HTML.pm.src: Simplified foster parenting (HTML5 revision 2732).
+
+2009-09-06  Wakaba  <wakaba@suika.fam.cx>
+
 	* HTML.pm.src: No longer does foster parenting |style|, |script|,
 	and |input type=hidden| elements (HTML5 revision 2988).
 
